CHANGES

  Version 0.9.4

    - python-montage is now an Astropy affiliated package

  Version 0.9.3

    - Fixed bug with user-specified work directory

    - Allow user to specify whether to only adjust levels when carrying out
      the background matching

  Version 0.9.2

    - Migrated to GitHub

    - Improved handing to check whether Montage commands are present

    - Improved handling of temporary work directory

  Version 0.9.1

    Minor bug fixes and improvements

  Version 0.9.0

    Initial release